Prevent wrapping of table data (mostly school names)

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,4 +19,8 @@ table.results-table-classic {
     transform: rotate(180deg);
     width: 1.25rem;
   }
+
+  td {
+    white-space: nowrap;
+  }
 }
